# Agents-using-crewai

./: README.md
2nd-PoemGenerator-Agent/: README.md  poem.txt  pyproject.toml
2nd-PoemGenerator-Agent/src/project2/: main.py
first-Ai-Agent-A-Researcher/: pyproject.toml
first-Ai-Agent-A-Researcher/output/: report.md
first-Ai-Agent-A-Researcher/src/latest_ai_development/: crew.py  main.py
